Fixed: overflow issue

--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ html {
 
 body {
     font-family: 'Lato', sans-serif;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 .container {
